--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,5 @@
 name: Deploy private GitHub Pages site
+
 on:
   push:
     branches:
@@ -15,15 +16,19 @@ concurrency:
 
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
-      - name: Upload artifact
+      - name: Upload site
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./   # tempat index.html kamu
-      - name: Deploy to GitHub Pages
+          path: ./   # Pastikan index.html ada di sini
+      - name: Deploy
+        id: deployment
         uses: actions/deploy-pages@v4
